# footprints

./: .env.sample  .gitignore  README.md  build.sh  clean.sh  lambda_functions  package-lock.json  package.json
deploy/: stack.ts
deploy/lib/: api.ts  authentication.ts  cognito.ts  footprints.ts  frontend.ts  lambda-stack.ts  lambda.ts  main.ts
footprints-functions/: Cargo.toml  get_functions.sh
footprints-functions/src/handlers/get_status/: main.rs
footprints-web/: .env.sample  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
footprints-web/src/: Index.tsx
footprints-web/src/pages/: callback.tsx  index.tsx
sample-lambda-func/: Cargo.toml
sample-lambda-func/src/: main.rs
schemas/: openapi.yml
scripts/: build.sh  build.ts  clean.ts  deploy.sh  deploy.ts  destroy.sh  destroy.ts  targets.ts
