[package]
name = "footprints_functions"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.5.0"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
lambda_http = "0.4.1"
http = "*"

[dev-dependencies]
pretty_assertions = "0.7.2"

[[bin]]
name = "get_status"
path = "src/handlers/get_status/main.rs"
